adicionado sobre e contato links para a pagina home

--- a/home.html
+++ b/home.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre mim</title>
+    <title>Home</title>
   </head>
   <body>
-    <h1>Hello, I'm Rafael Costa! 👋</h1>
+    <h1>Bem-vindo ao meu site</h1>
+    <a href="sobre.html">Sobre mim</a>
+    <a href="contato.html">Entre em contato</a>
   </body>
 </html>
