Criado links para home para contato e sobre

--- a/contato.html
+++ b/contato.html
@@ -20,5 +20,8 @@
 
       <input type="submit" value="Enviar" />
     </form>
+
+    <br />
+    <a href="home.html">Voltar a página home</a>
   </body>
 </html>
