--- a/sobre.html
+++ b/sobre.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Hello, I'm Rafael Costa! 👋</h1>
+
+    <br />
+    <a href="home.html">Voltar a página home</a>
   </body>
 </html>
